--- a/E-Poster/ScreenSaver.xaml
+++ b/E-Poster/ScreenSaver.xaml
@@ -18,12 +18,12 @@
                 </BeginStoryboard>
             </EventTrigger.Actions>
         </EventTrigger>
-
     </Window.Triggers>
     <Viewbox>
         <Grid Width="1080" Height="1920">
             <Button Click="Button_Click" BorderThickness="0,0,0,0">
-                <Image Source="pack://application:,,,/resources/screen.jpg"/>
+                <Image HorizontalAlignment="Center" VerticalAlignment="Center"  Name="ScrSaver" >
+                </Image>
             </Button>
         </Grid>
     </Viewbox>
