--- a/E-Poster/PaperList.xaml
+++ b/E-Poster/PaperList.xaml
@@ -24,71 +24,23 @@
     <Viewbox>
         <Grid Width="1080" Height="1920">
             <Grid.RowDefinitions>
-                <RowDefinition Height="505"/>
-                <RowDefinition Height="1290"/>
+                <RowDefinition Height="480"/>
+                <RowDefinition Height="1325"/>
                 <RowDefinition Height="125"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <!--头部功能按钮-->
-            <DockPanel Grid.Row="0" Panel.ZIndex="10" Grid.ColumnSpan="2">
-
-                <!--展开分类侧边的按钮-->
-                <StackPanel HorizontalAlignment="Left" VerticalAlignment="Bottom">
-                    <Button    Click="Button_Click_1" Width="100" Height="100"   Margin="32,0,0,0">
-                        <Button.Template>
-                            <ControlTemplate>
-                                <Rectangle Margin="2">
-                                    <Rectangle.Fill>
-                                        <ImageBrush ImageSource="pack://application:,,,/resources/typelist.png"/>
-                                    </Rectangle.Fill>
-                                </Rectangle>
-                            </ControlTemplate>
-                        </Button.Template>
-                    </Button>
-                </StackPanel>
-                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="30,0,0,0">
-                    <!--搜索框-->
-                    <Border Width="680" Height="90" BorderThickness="4,4,4,4" >
-                        <Border.BorderBrush> 
-                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                                <GradientStop Color="#0DBCCD" Offset="1"/>
-                                <GradientStop Color="#72EDF8" Offset="0"/>
-                            </LinearGradientBrush>
-                        </Border.BorderBrush>
-                        <Grid HorizontalAlignment="Stretch">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="600"/>
-                                <ColumnDefinition Width="80"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBox Name="txt_keyword" Background="Transparent" Grid.Column="0" VerticalAlignment="Center"  Text="{DynamicResource txt_search}" FontSize="28" Width="600" HorizontalContentAlignment="Left" Foreground="#999999" BorderThickness="0,0,0,0" GotFocus="TxtSearch_GotFocus" LostFocus="TxtSearch_LostFocus" Margin="40,0,0,0"/>
-                            <Button Name="btn_search" Width="60" Height="60" Background="Transparent" Grid.Column="1" BorderThickness="0,0,0,0" Click="Btn_Search_Click" HorizontalAlignment="Left">
-                                <Button.Template>
-                                    <ControlTemplate>
-                                        <Rectangle>
-                                            <Rectangle.Fill>
-                                                <ImageBrush ImageSource="pack://application:,,,/resources/search.png" />
-                                            </Rectangle.Fill>
-                                        </Rectangle>
-                                    </ControlTemplate>
-                                </Button.Template>
-                            </Button>
-
-
-                        </Grid>
-                        <!--<TextBlock Text="{DynamicResource txt_search}"  FontSize="28"  Foreground="#999999" VerticalAlignment="Bottom"/>-->
-                    </Border>
-                </StackPanel>
-                <!--中英文切换按钮-->
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,39,17" Name="cn_en_btn">
+            <!--中英文切换按钮-->
+            <DockPanel Grid.Row="0" Panel.ZIndex="10" Grid.Column="1">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,50,90" Name="cn_en_btn">
                     <RadioButton Visibility="Visible" Click="CnEn_Click" Name="btn_cn">
                         <RadioButton.Template>
                             <ControlTemplate>
                                 <StackPanel>
-                                    <Border Width="82" Height="66" Background="#C7C7C7" x:Name="bdcn" CornerRadius="5,0,0,5">
-                                        <TextBlock Text="中" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="28"/>
+                                    <Border Width="62" Height="46" Background="#C7C7C7" x:Name="bdcn" CornerRadius="5,0,0,5">
+                                        <TextBlock Text="中" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="23"/>
                                     </Border>
                                 </StackPanel>
                                 <ControlTemplate.Triggers>
@@ -110,8 +62,8 @@
                         <RadioButton.Template>
                             <ControlTemplate>
                                 <StackPanel>
-                                    <Border Width="82" Height="66" Background="#C7C7C7" x:Name="bden" CornerRadius="0,5,5,0">
-                                        <TextBlock Text="EN" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="28"/>
+                                    <Border Width="62" Height="46" Background="#C7C7C7" x:Name="bden" CornerRadius="0,5,5,0">
+                                        <TextBlock Text="EN" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="23"/>
                                     </Border>
                                 </StackPanel>
                                 <ControlTemplate.Triggers>
@@ -130,6 +82,53 @@
                         </RadioButton.Template>
                     </RadioButton>
                 </StackPanel>
+            </DockPanel>
+            <!--头部搜索框及功能按钮-->
+            <DockPanel Grid.Row="0" Panel.ZIndex="10" Grid.ColumnSpan="2">
+                
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="40,0,0,0">
+                    <!--搜索框-->
+                    <Border Height="75" BorderThickness="0,0,0,0">
+                        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="714"/>
+                                <ColumnDefinition Width="116"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.Background>
+                                <ImageBrush  ImageSource="pack://application:,,,/resources/search_bg.png"/>
+                            </Grid.Background>
+                            <TextBox Name="txt_keyword" Background="Transparent" Grid.Column="0" VerticalAlignment="Center"  Text="{DynamicResource txt_search}" FontSize="28" Width="700" HorizontalContentAlignment="Left" Foreground="#999999" BorderThickness="0,0,0,0" GotFocus="TxtSearch_GotFocus" LostFocus="TxtSearch_LostFocus" Margin="40,0,0,0"/>
+                            <Button Name="btn_search" Width="60" Height="60"  Grid.Column="1" BorderThickness="0,0,0,0" Click="Btn_Search_Click" HorizontalAlignment="Center" Margin="0,0,20,0">
+                                <Button.Template>
+                                    <ControlTemplate>
+                                        <Rectangle>
+                                            <Rectangle.Fill>
+                                                <ImageBrush ImageSource="pack://application:,,,/resources/search.png" />
+                                            </Rectangle.Fill>
+                                        </Rectangle>
+                                    </ControlTemplate>
+                                </Button.Template>
+                            </Button>
+                        </Grid>
+                        <!--<TextBlock Text="{DynamicResource txt_search}"  FontSize="28"  Foreground="#999999" VerticalAlignment="Bottom"/>-->
+                    </Border>
+                </StackPanel>
+                <!--展开分类侧边的按钮-->
+                <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                    <Button    Click="Button_Click_1" Width="143" Height="75"   Margin="0,0,40,0">
+                        <Button.Template>
+                            <ControlTemplate>
+                                <Rectangle Margin="2">
+                                    <Rectangle.Fill>
+                                        <ImageBrush ImageSource="pack://application:,,,/resources/typelist.png"/>
+                                    </Rectangle.Fill>
+                                </Rectangle>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </StackPanel>
+                <!--中英文切换按钮-->
+                
             </DockPanel>
 
             <!-- 抽屉-论文分类-->
@@ -233,7 +232,7 @@ TextBlock.Foreground="{TemplateBinding Foreground}" />
             <!--<ScrollViewer Grid.Row="1" Grid.ColumnSpan="2"  VerticalScrollBarVisibility="Hidden">-->
             <StackPanel  Grid.Row="1" Grid.ColumnSpan="2">
                 <ListBox  Name="paperList" 
-                Background="Transparent" SelectionChanged="paperList_SelectionChanged"  BorderThickness="0,0,0,0" Padding="39,20,39,0" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" >
+                Background="Transparent" SelectionChanged="paperList_SelectionChanged"  BorderThickness="0,0,0,0" Padding="39,5,39,0" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" >
                     <!--考虑做静态变量的绑定ItemsSource="{Binding Source={x:Static util:CommonData.PaperList}}"  SelectionChanged="paperList_SelectionChanged" -->
                     <!--ItemsSource="{Binding PaperList, Mode=OneWay}"-->
                     <ListBox.ItemContainerStyle>
@@ -241,7 +240,7 @@ TextBlock.Foreground="{TemplateBinding Foreground}" />
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="ListBoxItem">
-                                        <Border x:Name="border" CornerRadius="10"  Background="#F8F8F8"  BorderThickness="3,3,5,5">
+                                        <Border x:Name="border" CornerRadius="10"  Background="#F8F8F8"  BorderThickness="3,3,3,5">
                                             <Border.BorderBrush>
                                                 <LinearGradientBrush Opacity="0.2">
                                                     <GradientStop Color="#377b81"/>
@@ -252,12 +251,12 @@ TextBlock.Foreground="{TemplateBinding Foreground}" />
                                     </ControlTemplate>
                                 </Setter.Value>
                             </Setter>
-                            <Setter Property="Margin" Value="0,0,0,15"/>
+                            <Setter Property="Margin" Value="0,0,0,14"/>
                         </Style>
                     </ListBox.ItemContainerStyle>
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <Border Name="border_paper" CornerRadius="10" Margin="27,20,30,24">
+                            <Border Name="border_paper" CornerRadius="10" Margin="27,18,30,18">
                                 <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="*"/>
@@ -300,7 +299,7 @@ TextBlock.Foreground="{TemplateBinding Foreground}" />
                                     </ScrollViewer>
 
 
-                                    <Grid  HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="1" Margin="0,24,0,0">
+                                    <Grid  HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="1" Margin="0,21,0,0">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="*"/>
@@ -353,7 +352,7 @@ TextBlock.Foreground="{TemplateBinding Foreground}" />
             </Button>
 
             <!--底部图片 可配置-->
-            <StackPanel Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <StackPanel Grid.Row="2" Grid.ColumnSpan="2" Height="125" Width="1080">
                 <Image x:Name="bottom"  Stretch="None" />
             </StackPanel>
             <Canvas x:Name="nodata" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="1" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center">
